# nomoros-ai-layer

./: .gitignore  .replit  architecture.md  pyproject.toml  replit.md
.agents/: agent_assets_metadata.toml
attached_assets/: Pasted-CONTEXT-You-are-working-on-the-Nomoros-AI-Engine-a-Pyth_1767046056918.txt  Pasted-Perfect-below-is-a-copy-paste-Replit-prompt-that-tells-_1767045905514.txt  Pasted-You-are-extending-an-existing-Python-FastAPI-backend-ca_1766156429233.txt  Pasted-You-are-extending-an-existing-Python-FastAPI-backend-fo_1766159455302.txt  Pasted-You-are-extending-an-existing-Python-FastAPI-backend-fo_1766160967289.txt  Pasted-You-are-extending-an-existing-Python-FastAPI-backend-fo_1766269978762.txt  Pasted-You-are-modifying-an-existing-Python-FastAPI-backend-th_1766160236782.txt  Pasted-You-are-refining-the-output-structuring-layer-of-an-exi_1766274800591.txt  Pasted-You-are-working-in-the-Nomoros-FastAPI-AI-Engine-repo-T_1767025631517.txt  Pasted-You-are-working-in-the-Nomoros-FastAPI-AI-Engine-repo-T_1767025692866.txt  Pasted-You-are-working-on-the-Nomoros-AI-Engine-Python-FastAPI_1767303922938.txt
data/: compliance_store.json
nomoros_ai/: __init__.py  auth.py  config.py  main.py
nomoros_ai/models/: classification.py  compliance.py  document.py  request.py  search_environmental.py  search_local_authority.py  search_local_authority_response.py  search_local_authority_structured.py  ta6.py  title.py
nomoros_ai/routers/: compliance.py  documents.py
nomoros_ai/services/: classify.py  compliance_rules.py  (+3 more)
tests/: test_document_classifier.py  test_ta6.py
(+19 files in other folders)
