[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "azure-ai-formrecognizer>=3.3.3",
    "fastapi>=0.125.0",
    "pydantic-settings>=2.12.0",
    "pypdf>=6.4.2",
    "python-multipart>=0.0.21",
    "uvicorn>=0.38.0",
]
